crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__scoped-explanation-junk.snap
---
source: rust/crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": null,
            "role": "Child",
            "speaker_code": "CHI"
          },
          {
            "name": null,
            "role": "Mother",
            "speaker_code": "MOT"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "1;08.",
        "corpus": "bates",
        "group": "normal",
        "language": "eng",
        "role": "Child",
        "sex": "female",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "bates",
        "language": "eng",
        "role": "Mother",
        "speaker": "MOT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "This",
                  "type": "text"
                }
              ],
              "raw_text": "This",
              "span": {
                "end": 158,
                "start": 154
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "is",
                  "type": "text"
                }
              ],
              "raw_text": "is",
              "span": {
                "end": 161,
                "start": 159
              },
              "type": "word"
            },
            {
              "content": {
                "content": [
                  {
                    "content": [
                      {
                        "content": "oh",
                        "type": "text"
                      }
                    ],
                    "raw_text": "oh",
                    "span": {
                      "end": 165,
                      "start": 163
                    },
                    "type": "word"
                  },
                  {
                    "content": [
                      {
                        "content": "oh",
                        "type": "text"
                      }
                    ],
                    "raw_text": "oh",
                    "span": {
                      "end": 168,
                      "start": 166
                    },
                    "type": "word"
                  },
                  {
                    "content": [
                      {
                        "content": "dash",
                        "type": "text"
                      }
                    ],
                    "raw_text": "dash",
                    "span": {
                      "end": 173,
                      "start": 169
                    },
                    "type": "word"
                  },
                  {
                    "content": [
                      {
                        "content": "nineteen",
                        "type": "text"
                      }
                    ],
                    "raw_text": "nineteen",
                    "span": {
                      "end": 182,
                      "start": 174
                    },
                    "type": "word"
                  },
                  {
                    "content": [
                      {
                        "content": "point",
                        "type": "text"
                      }
                    ],
                    "raw_text": "point",
                    "span": {
                      "end": 188,
                      "start": 183
                    },
                    "type": "word"
                  },
                  {
                    "content": [
                      {
                        "content": "two",
                        "type": "text"
                      }
                    ],
                    "raw_text": "two",
                    "span": {
                      "end": 192,
                      "start": 189
                    },
                    "type": "word"
                  },
                  {
                    "content": [
                      {
                        "content": "b",
                        "type": "text"
                      }
                    ],
                    "form_type": "l",
                    "raw_text": "b@l",
                    "span": {
                      "end": 196,
                      "start": 193
                    },
                    "type": "word"
                  },
                  {
                    "content": [
                      {
                        "content": "e",
                        "type": "text"
                      }
                    ],
                    "form_type": "l",
                    "raw_text": "e@l",
                    "span": {
                      "end": 200,
                      "start": 197
                    },
                    "type": "word"
                  }
                ]
              },
              "scoped_annotations": [
                {
                  "text": "OO-19.2(b)(e)",
                  "type": "explanation"
                }
              ],
              "type": "annotated_group"
            },
            {
              "content": [
                {
                  "content": "here",
                  "type": "text"
                }
              ],
              "raw_text": "here",
              "span": {
                "end": 224,
                "start": 220
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "1;08.",
        "corpus": "bates",
        "group": "normal",
        "language": "eng",
        "role": "Child",
        "sex": "female",
        "speaker": "CHI"
      },
      "name": null,
      "role": "Child"
    },
    "MOT": {
      "birth_date": null,
      "code": "MOT",
      "id": {
        "corpus": "bates",
        "language": "eng",
        "role": "Mother",
        "speaker": "MOT"
      },
      "name": null,
      "role": "Mother"
    }
  }
}
