crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__separators-anywhere.snap
---
source: rust/crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": null,
            "role": "Target_Child",
            "speaker_code": "CHI"
          },
          {
            "name": null,
            "role": "Mother",
            "speaker_code": "MOT"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "corpus",
        "language": "eng",
        "role": "Target_Child",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "corpus",
        "language": "eng",
        "role": "Mother",
        "speaker": "MOT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "kind": "colon",
              "type": "separator"
            },
            {
              "content": [
                {
                  "content": "hello",
                  "type": "text"
                }
              ],
              "raw_text": "hello",
              "span": {
                "end": 160,
                "start": 155
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "word",
                  "type": "text"
                }
              ],
              "raw_text": "word",
              "span": {
                "end": 173,
                "start": 169
              },
              "type": "word"
            },
            {
              "kind": "colon",
              "type": "separator"
            },
            {
              "content": [
                {
                  "content": "word",
                  "type": "text"
                }
              ],
              "raw_text": "word",
              "span": {
                "end": 180,
                "start": 176
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "MOT"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "test",
                  "type": "text"
                }
              ],
              "raw_text": "test",
              "span": {
                "end": 193,
                "start": 189
              },
              "type": "word"
            },
            {
              "kind": "comma",
              "type": "separator"
            },
            {
              "content": [
                {
                  "content": "test",
                  "type": "text"
                }
              ],
              "raw_text": "test",
              "span": {
                "end": 200,
                "start": 196
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "Court",
                  "type": "text"
                }
              ],
              "raw_text": "Court",
              "span": {
                "end": 214,
                "start": 209
              },
              "type": "word"
            },
            {
              "kind": "colon",
              "type": "separator"
            }
          ],
          "terminator": {
            "type": "interruption"
          }
        },
        "speaker": "MOT"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "initial",
                  "type": "text"
                }
              ],
              "raw_text": "initial",
              "span": {
                "end": 234,
                "start": 227
              },
              "type": "word"
            },
            {
              "kind": "colon",
              "type": "separator"
            },
            {
              "content": [
                {
                  "content": "middle",
                  "type": "text"
                }
              ],
              "raw_text": "middle",
              "span": {
                "end": 243,
                "start": 237
              },
              "type": "word"
            },
            {
              "kind": "colon",
              "type": "separator"
            },
            {
              "content": [
                {
                  "content": "final",
                  "type": "text"
                }
              ],
              "raw_text": "final",
              "span": {
                "end": 251,
                "start": 246
              },
              "type": "word"
            },
            {
              "kind": "colon",
              "type": "separator"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "kind": "comma",
              "type": "separator"
            },
            {
              "content": [
                {
                  "content": "comma",
                  "type": "text"
                }
              ],
              "raw_text": "comma",
              "span": {
                "end": 269,
                "start": 264
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "first",
                  "type": "text"
                }
              ],
              "raw_text": "first",
              "span": {
                "end": 275,
                "start": 270
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "MOT"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "kind": "semicolon",
              "type": "separator"
            },
            {
              "content": [
                {
                  "content": "semicolon",
                  "type": "text"
                }
              ],
              "raw_text": "semicolon",
              "span": {
                "end": 295,
                "start": 286
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "anywhere",
                  "type": "text"
                }
              ],
              "raw_text": "anywhere",
              "span": {
                "end": 304,
                "start": 296
              },
              "type": "word"
            },
            {
              "kind": "semicolon",
              "type": "separator"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "comma",
                  "type": "text"
                }
              ],
              "raw_text": "comma",
              "span": {
                "end": 320,
                "start": 315
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "before",
                  "type": "text"
                }
              ],
              "raw_text": "before",
              "span": {
                "end": 327,
                "start": 321
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "terminator",
                  "type": "text"
                }
              ],
              "raw_text": "terminator",
              "span": {
                "end": 338,
                "start": 328
              },
              "type": "word"
            },
            {
              "kind": "comma",
              "type": "separator"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "corpus": "corpus",
        "language": "eng",
        "role": "Target_Child",
        "speaker": "CHI"
      },
      "name": null,
      "role": "Target_Child"
    },
    "MOT": {
      "birth_date": null,
      "code": "MOT",
      "id": {
        "corpus": "corpus",
        "language": "eng",
        "role": "Mother",
        "speaker": "MOT"
      },
      "name": null,
      "role": "Mother"
    }
  }
}
