crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__separators.snap
---
source: crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "languages": [
    "eng"
  ],
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": null,
            "role": "Child",
            "speaker_code": "CHI"
          },
          {
            "name": null,
            "role": "Mother",
            "speaker_code": "MOT"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "3;00.",
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Child",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Mother",
        "speaker": "MOT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Separators: comma (,), tag-question („), vocative (‡)",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Constructs: separator, comma, non_colon_separator,",
              "type": "text"
            },
            {
              "type": "continuation"
            },
            {
              "text": "tag_marker (‡ „)",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "well",
              "content": [
                {
                  "content": "well",
                  "type": "text"
                }
              ],
              "raw_text": "well",
              "type": "word"
            },
            {
              "kind": "comma",
              "type": "separator"
            },
            {
              "cleaned_text": "I",
              "content": [
                {
                  "content": "I",
                  "type": "text"
                }
              ],
              "raw_text": "I",
              "type": "word"
            },
            {
              "cleaned_text": "think",
              "content": [
                {
                  "content": "think",
                  "type": "text"
                }
              ],
              "raw_text": "think",
              "type": "word"
            },
            {
              "cleaned_text": "so",
              "content": [
                {
                  "content": "so",
                  "type": "text"
                }
              ],
              "raw_text": "so",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "it",
              "content": [
                {
                  "content": "it",
                  "type": "text"
                }
              ],
              "raw_text": "it",
              "type": "word"
            },
            {
              "cleaned_text": "was",
              "content": [
                {
                  "content": "was",
                  "type": "text"
                }
              ],
              "raw_text": "was",
              "type": "word"
            },
            {
              "cleaned_text": "lowering",
              "content": [
                {
                  "content": "lowering",
                  "type": "text"
                }
              ],
              "raw_text": "lowering",
              "type": "word"
            },
            {
              "cleaned_text": "concrete",
              "content": [
                {
                  "content": "concrete",
                  "type": "text"
                }
              ],
              "raw_text": "concrete",
              "type": "word"
            },
            {
              "cleaned_text": "girders",
              "content": [
                {
                  "content": "girders",
                  "type": "text"
                }
              ],
              "raw_text": "girders",
              "type": "word"
            },
            {
              "cleaned_text": "off",
              "content": [
                {
                  "content": "off",
                  "type": "text"
                }
              ],
              "raw_text": "off",
              "type": "word"
            },
            {
              "cleaned_text": "a",
              "content": [
                {
                  "content": "a",
                  "type": "text"
                }
              ],
              "raw_text": "a",
              "type": "word"
            },
            {
              "cleaned_text": "lorry",
              "content": [
                {
                  "content": "lorry",
                  "type": "text"
                }
              ],
              "raw_text": "lorry",
              "type": "word"
            },
            {
              "kind": "tag",
              "type": "separator"
            },
            {
              "cleaned_text": "wasn't",
              "content": [
                {
                  "content": "wasn't",
                  "type": "text"
                }
              ],
              "raw_text": "wasn't",
              "type": "word"
            },
            {
              "cleaned_text": "it",
              "content": [
                {
                  "content": "it",
                  "type": "text"
                }
              ],
              "raw_text": "it",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "question"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "it",
              "content": [
                {
                  "content": "it",
                  "type": "text"
                }
              ],
              "raw_text": "it",
              "type": "word"
            },
            {
              "cleaned_text": "was",
              "content": [
                {
                  "content": "was",
                  "type": "text"
                }
              ],
              "raw_text": "was",
              "type": "word"
            },
            {
              "cleaned_text": "lowering",
              "content": [
                {
                  "content": "lowering",
                  "type": "text"
                }
              ],
              "raw_text": "lowering",
              "type": "word"
            },
            {
              "cleaned_text": "concrete",
              "content": [
                {
                  "content": "concrete",
                  "type": "text"
                }
              ],
              "raw_text": "concrete",
              "type": "word"
            },
            {
              "cleaned_text": "girders",
              "content": [
                {
                  "content": "girders",
                  "type": "text"
                }
              ],
              "raw_text": "girders",
              "type": "word"
            },
            {
              "cleaned_text": "off",
              "content": [
                {
                  "content": "off",
                  "type": "text"
                }
              ],
              "raw_text": "off",
              "type": "word"
            },
            {
              "cleaned_text": "a",
              "content": [
                {
                  "content": "a",
                  "type": "text"
                }
              ],
              "raw_text": "a",
              "type": "word"
            },
            {
              "cleaned_text": "lorry",
              "content": [
                {
                  "content": "lorry",
                  "type": "text"
                }
              ],
              "raw_text": "lorry",
              "type": "word"
            },
            {
              "kind": "vocative",
              "type": "separator"
            },
            {
              "cleaned_text": "wasn't",
              "content": [
                {
                  "content": "wasn't",
                  "type": "text"
                }
              ],
              "raw_text": "wasn't",
              "type": "word"
            },
            {
              "cleaned_text": "it",
              "content": [
                {
                  "content": "it",
                  "type": "text"
                }
              ],
              "raw_text": "it",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "question"
          }
        },
        "speaker": "MOT"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "options": [],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "3;00.",
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Child",
        "speaker": "CHI"
      },
      "name": null,
      "role": "Child"
    },
    "MOT": {
      "birth_date": null,
      "code": "MOT",
      "id": {
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Mother",
        "speaker": "MOT"
      },
      "name": null,
      "role": "Mother"
    }
  }
}
